[package]
name = "nucleid"
version = "0.1.0"
authors = ["Maxime Ripard <maxime@cerno.tech>"]
description = "Linux KMS abstraction library"
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["linux", "graphics", "kms"]
categories = ["api-bindings", "graphics", "os::linux-apis"]
repository = "https://github.com/mripard/nucleid/"

[dependencies]
fixed = { version = "1.29.0", default-features = false }
memmap = { package = "memmap2", version = "0.9.5" }
nix = { version = "0.30.1", default-features = false, features = ["ioctl"] }
num_enum = { version = "0.7.3", features = ["complex-expressions"] }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.98", default-features = false, features = ["std"] }
clap = { version = "4.5.39", default-features = false, features = ["std"] }
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
